--- a/client/partial/movies/list.html
+++ b/client/partial/movies/list.html
@@ -1,7 +1,7 @@
 <h1>Movie List</h1>
 
 <p>
-    <a class="btn btn-primary" ng-click="add()"><a href="/actors">Actors</a></a>
+    <a class="btn btn-primary" href="/" ng-click="add()">Add Movie</a>
 </p>
 
 <table class="table table-striped table-hover">
