--- a/client/partial/movies/detail.html
+++ b/client/partial/movies/detail.html
@@ -5,6 +5,11 @@
   <dd>{{movie.description}}</dd>
 </dl>
 
+<dl class="dl-horizontal">
+  <dt>Release year</dt>
+  <dd>{{movie.releaseYear}}</dd>
+</dl>
+
 <a href="/movies/{{movie.id}}/edit" title="Edit movie" class="btn">
     Edit
 </a>
