--- a/client/partial/movies/list.html
+++ b/client/partial/movies/list.html
@@ -1,7 +1,7 @@
 <h1>Movie List</h1>
 
 <p>
-    <a class="btn btn-primary" href="/new">Add Movie</a>
+    <a class="btn btn-primary" href="/" ng-click="add()">Add Movie</a>
 </p>
 
 <div ng-include="'/partial/movies/_list.html'"></div>
