fix new tab issue

--- a/client/partial/movies/list.html
+++ b/client/partial/movies/list.html
@@ -1,4 +1,4 @@
 <h1>Movie List</h1>
-<a class="btn btn-primary pull-right" href="/movies/new" target="_blank">Add Movie</a>
+<a class="btn btn-primary pull-right" href="/movies/new" ng-click="add()">Add Movie</a>
 <p class="lead">This list contains all available movies.</p>
 <div ng-include="'/partial/movies/_list.html'"></div>
