--- a/client/partial/movies/_list.html
+++ b/client/partial/movies/_list.html
@@ -7,7 +7,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="movie in movies | orderBy:order:reverse | filter:searchText">
+        <tr ng-repeat="movie in movies | orderBy:order:reverse | filter:SearchText">
             <td>
                 <a href="#" ng-href="/movies/{{movie.id}}">
                     {{movie.title}}
