--- a/client/partial/movies/detail.html
+++ b/client/partial/movies/detail.html
@@ -1,9 +1,6 @@
 <h2>{{movie.title}}</h2>
 
-<dl class="dl-horizontal">
-  <dt>Description</dt>
-  <dd>{{movie.description}}</dd>
-</dl>
+<div class="well" ng-bind-html="movie.description"></div>
 
 <dl class="dl-horizontal">
   <dt>Release year</dt>
